fixing up figures and captions

--- a/4.mss/main.tex
+++ b/4.mss/main.tex
@@ -172,23 +172,40 @@
 \section{Results}
 
 	\paragraph{} 
-	We applied our framework to estimate non-trophic interactions between 22 focal species and 52 neighbours in an annual wildflower community. In our case study, 15\% of interactions between focal species were estimated using the REM (out of 484), and 40\% when taking all neighbouring species into account (out of 1144). IFM and REM estimates matched well and followed similar distributions (Figure \ref{fig:adist}). Interactions estimates were scaled into per-capita effects and the resulting interaction network is illustrated in Figure \ref{}.
+	We applied our framework to estimate non-trophic interactions between 22 focal species and 52 neighbours in an annual wildflower community. In our case study, 13.6\% of interactions between focal species were estimated using the REM (out of 484), and 40\% when taking all neighbouring species into account (out of 1144). IFM and REM estimates matched well and followed similar distributions (Figure \ref{fig:adist}). Interactions estimates were scaled into per-capita effects and the resulting interaction network is illustrated in Figure \ref{fig:all_vs_rem}.A.
 
-
-    \begin{figure}[H]
-        \includegraphics[width=0.95\textwidth]{../2.analyses/figures/alpha_est_distr.png}
-        \caption{Distribution of interaction estimates from our case study. Top panel shows the distribution of observed interactions as estimated by the IFM. Second panel shows those same interactions, but estimated with the REM. Bottom panel shows the distribution of unobserved interactions estimated by the REM. Interaction estimates are given as unscaled \(\beta\)'s.}
-        \label{fig:adist}
-    \end{figure}
-
-    \paragraph{} 
+	    \paragraph{} 
     One potential use for translating interaction estimates into per-capita interaction strengths is to identify species of particular importance to the healthy functioning of the whole community. Keystone species for example typically have low abundance but disproportionately strong effects on the rest of the community \parencite{Power1996}. Foundation species on the other hand are locally abundant and have important, sometimes facilitative effects on other species population dynamics \parencite{Ellison2019}. Figure \ref{fig:species}.A. identifies several contenders for keystone (orange diamonds) or foundation (blue diamonds) species status based on their community abundance and net interaction effects across all neighbours. Likewise, the integration of exotic species into native communities can also be evaluated using interaction networks. In our case study, two out of three exotic species (red diamonds in Fig. \ref{fig:species}) were extremely abundant but had substantially different effects on neighbours, with the grass \textit{Pentameris airoides} facilitating some species, whereas \textit{Arctotheca calendula} had almost exclusively competitive effects on all other neighbours (Fig. \ref{fig:species}.B.). These examples are not exhaustive, but serve to illustrate how interaction matrices can help us understand what roles specific species play within a community. 
 
 
-    \begin{figure}[!h]
+    \begin{figure}[H]
+        \hspace*{-3.5cm}
+        \includegraphics[width=1.5\textwidth]{../2.analyses/figures/interaction_ests.png}
+        \caption{Distribution of interaction estimates from our case study. Parameter estimates are sampled from the 80\% posterior confidence intervals returned by STAN. Upper left panel shows the distribution of observed interactions as estimated by the IFM ($\beta_{ij}$), which are then plotted against the corresponding REM estimates ($r_i e_j$) in the upper right panel. Bottom rows show the distribution of \textit{unobserved} (left) and observed interactions estimates returned by the REM. 
+        . Interaction estimates are unscaled.}
+        \label{fig:adist}
+    \end{figure}
+
+        \begin{figure}[H]
+        \includegraphics[width=0.95\textwidth]{../2.analyses/figures/all_vs_rem.png}
+        \caption{Mean per-capita interaction strengths between 22 focal species of wildflowers. (A) shows all observed and unobserved interactions whereas (B) shows those interactions estimated by the REM only. Competitive interactions are shown in yellow and facilitative in blue, line thickness denotes interaction strength. Arrows point to species $i$.}
+        \label{fig:all_vs_rem}
+    \end{figure}
+
+
+
+        \paragraph{}
+    Our resulting networks also differ qualitatively to association networks (Figure \ref{fig:netwks}.A-B, E), a common alternative to inferring interactions in species-rich communities. Firstly, intraspecific interactions ($\alpha_{ii}$) are estimated for all focal species and allow us to quantify how much a species regulates itself. In our case study, 85\% of all species across all network samples showed intraspecific competition. Interactions estimated on growth rates are also directed, which means they have an associated direction such as going from species $i$ to species $j$ ($\alpha_{ij}$), or alternatively from $j$ to $i$ ($\alpha_{ji}$). This interaction pair does not need to be of the same sign or strength, which makes the resulting interaction networks non-symmetrical. Interaction pairs of opposing signs were common in our case study (Figure \ref{fig:netwks}.D), making up 40\% of all pairs and many more differed in strength. 
+
+    \paragraph{}
+    In addition to explicitely allowing for many species interactions, including both competitive (Figure \ref{fig:netwks}.A) and facilitative (Figure \ref{fig:netwks}.B) interactions is another feature which distinguishes our framework from traditional approaches to plant community ecology. Plant population dynamic models typically force interactions to be competitive, despite rising evidence that facilitation is common and an important driver of plant community dynamics \parencite{Brooker2008a}. In our case study, 35\% of all focal x neighbour interactions were facilitative, as were 26 \% of all focal x focal interactions.
+
+
+
+    \begin{figure}[H]
         \hspace*{-1cm}
         \includegraphics[width=1.2\textwidth]{../2.analyses/figures/spceffects_edited.png}
-        \caption{Focal species net effects on neighbours, according to their abundance (A). On the x axis, values over 0 indicate a net competitive effect whereas values below 0 indicate a net facilitative effect on neighbouring species. Dashed lines represent the median value for focals. Diamonds are species means across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Yellow, blue and red diamonds signify potential keystone or foundation species, and exotic species respectively. (B) Focal species effects on neighbours, split into competitive vs. facilitative. Axes refer to the absolute sum of competitive vs. facilitative interactions.}
+        \caption{Focal species net effects on neighbours, according to their abundance (A). On the x axis, values over 0 indicate a net competitive effect whereas values below 0 indicate a net facilitative effect on neighbouring species. Dashed lines represent the median value for focals. Diamonds are species means across all network samples, black lines cover the 50\% quantile and grey dots indicate the full range of out-strength values as calculated from 1000 sampled networks. Yellow, blue and red diamonds signify potential keystone or foundation species, and exotic species respectively. (B) Focal species effects on neighbours, split into competitive vs. facilitative. Axes refer to the absolute sum of competitive vs. facilitative interactions. (1) \textit{P. airoides}, (2) \textit{A. calendula}.}
         \label{fig:species}
     \end{figure} 
 
@@ -204,17 +221,12 @@
  % - abundance - sum of comp effects - sum of facil effects
 
 
-    \paragraph{}
-    Our resulting networks also differ qualitatively to association networks (Figure \ref{fig:netwks}.A-B, E), a common alternative to inferring interactions in species-rich communities. Firstly, intraspecific interactions ($\alpha_{ii}$) are estimated for all focal species and allow us to quantify how much a species regulates itself. In our case study, 85\% of all species across all network samples showed intraspecific competition. Interactions estimated on growth rates are also directed, which means they have an associated direction such as going from species $i$ to species $j$ ($\alpha_{ij}$), or alternatively from $j$ to $i$ ($\alpha_{ji}$). This interaction pair does not need to be of the same sign or strength, which makes the resulting interaction networks non-symmetrical. Interaction pairs of opposing signs were common in our case study (Figure \ref{fig:netwks}.D), making up 40\% of all pairs and many more differed in strength. 
 
-    \paragraph{}
-    In addition to explicitely allowing for many species interactions, including both competitive (Figure \ref{fig:netwks}.A) and facilitative (Figure \ref{fig:netwks}.B) interactions is another feature which distinguishes our framework from traditional approaches to plant community ecology. Plant population dynamic models typically force interactions to be competitive, despite rising evidence that facilitation is common and an important driver of plant community dynamics \parencite{Brooker2008a}. In our case study, 35\% of all focal x neighbour interactions were facilitative, as were 26 \% of all focal x focal interactions.
-
+    \newpage
 
     \begin{figure}[H]
-        \hspace*{-2cm}
-        \includegraphics[width=1.2\textwidth]{../2.analyses/figures/together.png}
-        \caption{Competitive (A) and facilitative (B) interaction networks estimated from our model framework, compared to an association network (E) estimated from the same data using the cooccur package \parencite{Griffith2016}. Competitive and facilitative interactions are here shown separately for ease of view but were analysed together (C). Focal species only are included. Species associations (E) were all negative.  Interactions estimated for (A) and (B) are given as the mean over 1000 samples. (D) shows the proportion of interaction loops which were asymmetric (+/-), cooperative (+/+) or competitive (-/-).}
+        \includegraphics[width=\textwidth]{../2.analyses/figures/bigntwkfig.png}
+        \caption{Competitive (A) and facilitative (B) per-capita interaction networks estimated from our model framework, compared to an association network (C) estimated from the same data using the cooccur package \parencite{Griffith2016}. Competitive and facilitative interactions are here shown separately for ease of view but were analysed together (see Fig. \ref{fig:all_vs_rem}.A). Focal species only are included. Species associations (C) were all negative.  Interactions estimated for (A) and (B) are given as the mean over 1000 samples. Line thickness denotes the strength of the interactions or association. (D) shows the proportion of pair-wise interaction loops which were asymmetric (+/-), cooperative (+/+) or competitive (-/-) in our interaction matrix.}
         \label{fig:netwks}
     \end{figure}    
 
